scale-workloads-with-ingress-traffic/demo-prometheus-adapter-app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apache2
  namespace: autoscale-all-the-things
  labels:
    app: apache2
spec:
  ports:
    - port: 80
      name: http
      targetPort: 80
  selector:
    app: apache2
