scale-workloads-with-ingress-traffic/demo-prometheus-adapter-app/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: apache2
  namespace: autoscale-all-the-things
spec:
  rules:
    - host: apache2.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: apache2
              servicePort: 80
  tls:
    - hosts:
        - apache2.example.com
